--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Home - Aryo</title>
 <link href="img/favicon.png" rel="shortcut icon">
 <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -34,22 +34,22 @@
 		  <div class="collapse navbar-collapse" id="navbar">
 			<ul class="navbar-nav ms-auto">
 			  <li class="nav-item active">
-				<a class="nav-link" href="index.html">Home</a>
+				<a class="nav-link" href="index.html">Home <i class="las la-angle-down"></i></a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="#">Services</a>
+				<a class="nav-link" href="#">Services <i class="las la-angle-down"></i></a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="#">Portfolio</a>
+				<a class="nav-link" href="#">Portfolio <i class="las la-angle-down"></i></a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="#">Blog</a>
+				<a class="nav-link" href="#">Blog <i class="las la-angle-down"></i></a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="#">Shop</a>
+				<a class="nav-link" href="#">Shop <i class="las la-angle-down"></i></a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="#">Contact</a>
+				<a class="nav-link" href="#">Contact <i class="las la-angle-down"></i></a>
 			  </li>
 			</ul>
 
